# natural-languages

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  main.py  pyproject.toml
data/: README.md
docs/: books.ipynb  detectors.ipynb  dictionaries.ipynb  dictionary_stats_analysis.ipynb  records.ipynb
natural_languages/analysis/: __init__.py  generative.py  phrases.py  records.py
natural_languages/common/: __init__.py  types.py
natural_languages/data/: __init__.py  fetch.py  loader.py  preprocessor.py  wolne_lektury.py
natural_languages/detectors/: __init__.py  abelian.py  anagrams.py  avoidance.py  palindromes.py  shuffled.py  squares.py  tangrams.py
natural_languages/examples/: chiasmus.py  dictionary_stats.py  grammatical_shuffle.py  records.py  single_words.py  two_word_shuffle.py
tests/: test_detectors.py  test_generative.py  test_phrases.py  test_records.py
