[project]
name = "natural-languages"
version = "0.1.0"
description = "Detecting combinatorial structures in natural language data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8",
    "mypy>=2.1.0",
]

[tool.ruff]
  line-length = 120
  # pyflakes, pycodestyle, isort
  lint.select = ["F", "E", "W", "I001"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
